@@ -1,4 +1,5 @@
 
+	* defer truncating existing files until the first time we write to them
 	* fix issue resuming 1.0.x downloads with a file priority 0
 	* fix torrent_status::next_announce
 	* fix pad-file scalability issue
